<resources>
    <string name="app_name">G-Watch Wear App</string>
    <string name="app_desc_title">G-Watch App</string>
    <string name="app_desc_intro">Looking for more comfortable way how to monitor your glucose levels? If you have a Samsung TizenOS smart watch then this is the ideal app for you!</string>
    <string name="app_desc_text">G-Watch App is an Android application for a Samsung smart watch companion watch face. It collects glucose values provided by 3rd party CGM applications (Glimp, XDrip+, DiaBox, DexCom, LibreAlarm, AndroidAPS, NightScout, Dexcom Share) and sends collected data to the watch. G-Watch watch face then displays received values to its user.</string>
    <string name="app_main_diagram">G-Watch ecosystem</string>
    <string name="app_desc_config">The appearance and behavior of G-Watch native watch face can be configured remotely from the G-Watch App Settings screen. Results are visible immediately after you send new configuration to the watch. Select Settings menu option or swipe left on the main app screen to see all configuration options. </string>
    <string name="app_desc_user_guide">You can find detailed installation and configuration description in G-Watch user manual which is available on app facebook page fb.me/gwatchapp</string>
    <string name="app_desc_first_run">The first run</string>
    <string name="app_desc_first_run_text">G-Watch native watch face needs 1&#8208;2 glucose samples (up to 10 minutes) to display correct values. During this initial time no glucose value, trend or status is displayed. See user guide for detailed setup description.</string>
    <string name="app_desc_important_note_title"><b>Important note</b></string>
    <string name="app_desc_disable_batt_opt_text">Don\&#39;t forget to disable all battery optimizations for G-Watch App otherwise you can miss glucose values if app is stopped by power manager. The same applies for apps required to transfer data to watch: Galaxy Wearable, its watch plugin, Samsung Accessory Library and system Bluetooth app.</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_console">Packet console</string>
    <string name="action_sync">Force sync</string>
    <string name="action_send">Send last glucose</string>
    <string name="action_status">Connection status</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_reset">Reset</string>
    <string name="action_reset_to_default">Reset to default</string>
    <string name="action_default">Default</string>
    <string name="action_select">Select</string>
    <string name="action_apply">Apply changes</string>
    <string name="action_apply_all">Send all values</string>
    <string name="action_reset_all">Reset all to defaults</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_clear">Clear content</string>
    <string name="action_import">Import settings</string>
    <string name="action_export">Export settings</string>
    <string name="action_navigation_up">Navigate up</string>
    <string name="conn_status_connected">CONNECTED</string>
    <string name="conn_status_disconnected">DISCONNECTED</string>
    <string name="conn_status_unknown">UNKNOWN</string>
    <string name="conn_notification_status_label">Status: %1$s</string>
    <string name="about_app_name" translatable="false">G-Watch Wear App 1.0.0</string>
    <string name="about_disclaimer_title">DISCLAIMER</string>
    <string name="about_license">By using this application, you agree to the following terms and conditions:</string>
    <string name="about_disclaimer">G-WATCH MUST NOT be used to make medical decisions. DO NOT use or rely on this system for treatment decisions or use as a substitute for professional healthcare judgement. Always seek the advice of a qualified healthcare professional for any medical questions. Use this software at your own risk.</string>
    <string name="about_warranty">THIS PROGRAM IS PROVIDED FREE OF CHARGE. THIS PROGRAM IS PROVIDED \'AS IS\' WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE PROGRAM IS WITH YOU. SHOULD THE PROGRAM PROVE DEFECTIVE, YOU ASSUME THE COST OF ALL SERVICING, REPAIR OR CORRECTION.</string>
    <string name="about_other_trademarks">This software is not associated with or endorsed by any equipment manufacturer and all trademarks are those of their respective owners.</string>
    <string name="compatible_cgm_apps">Supported 3rd party CGM applications:</string>
    <string name="about_glimp"><body><b>Glimp</b> application by CTAPP Software, www.deebee.it</body></string>
    <string name="about_xdrip"><body><b>xDrip+</b> application by Nightscout Foundation, https://github.com/NightscoutFoundation/xDrip</body></string>
    <string name="about_aaps"><body><b>AndroidAPS</b> application by Milos Kozak, https://github.com/nightscout/AndroidAPS</body></string>
    <string name="about_libre_alarm"><body><b>Libre Alarm</b> application by Pimpim Mobile, pimpimmi@gmail.com</body></string>
    <string name="about_diabox"><body><b>DiaBox</b> application by Bubblan, www.bubblan.org</body></string>
    <string name="about_dexcom"><body><b>DexCom</b> and <b>Dexcom Share</b> application by Dexcom, Inc., www.dexcom.com</body></string>
    <string name="about_nightscout"><body><b>NightScout</b> application by Nightscout Foundation, www.nightscout.info</body></string>
    <string name="about_resources">This application uses resources from the following sites:</string>
    <string name="about_icons8"><body><b>Icons8</b> free icons, visit https://icons8.com</body></string>
    <string name="about_bigsoundbank"><body><b>BigSoundBank</b> free sounds, visit https://bigsoundbank.com</body></string>
    <string name="about_localazy"><body><b>Localazy</b> free localization portal, visit https://localazy.com</body></string>
    <string name="about_libraries">This application uses the following open-source libraries:</string>
    <string name="about_colorpicker_name" translatable="false">HSV-Alpha Color Picker for Android v3.0.1</string>
    <string name="about_colorpicker_copyright" translatable="false">Copyright 2019 Martin Stone</string>
    <string name="about_okhttp_name" translatable="false">OkHttp v4.8.0</string>
    <string name="about_okhttp_copyright" translatable="false">Copyright 2019 Square, Inc.</string>
    <string name="about_apache_license_1">Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="about_apache_license_link">http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="about_apache_license_2">Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="pref_language_title">Language</string>
    <string name="edit_preference_validation_error">Invalid value</string>
    <string name="pref_data_source_title">Data Source</string>
    <string name="pref_data_source_summary">Select application to use as data source for glucose values</string>
    <string name="pref_glucose_levels_title">Glucose Levels</string>
    <string name="pref_glucose_levels_summary">Personalize thresholds for glucose ranges</string>
    <string name="pref_glucose_level_hyper">Hyperglycemia: </string>
    <string name="pref_glucose_level_hyper_summary">Lower bound for critical (high) glycemia range</string>
    <string name="pref_glucose_level_high">High glycemia: </string>
    <string name="pref_glucose_level_high_summary">Lower bound for higher glycemia range</string>
    <string name="pref_glucose_level_low">Low glycemia: </string>
    <string name="pref_glucose_level_low_summary">Upper bound for lower glycemia range</string>
    <string name="pref_glucose_level_hypo">Hypoglycemia: </string>
    <string name="pref_glucose_level_hypo_summary">Upper bound for critical (low) glycemia range</string>
    <string name="pref_glucose_level_units">Glucose units</string>
    <string name="pref_glucose_level_units_mmoll">mmol/l</string>
    <string name="pref_glucose_level_units_mgdl">mg/dl</string>
    <string name="pref_widget_title">App Widget</string>
    <string name="pref_widget_summary">Personalize app widget look and behavior</string>
    <string name="pref_widget_trend_indicator_title">Glucose Trend Indicator</string>
    <string name="pref_widget_trend_indicator_summary">Personalize glucose trend indicator colors</string>
    <string name="pref_widget_text_title">Widget Text</string>
    <string name="pref_widget_text_summary">Personalize colors of widget text</string>
    <string name="pref_widget_graph_title">Widget Graph</string>
    <string name="pref_widget_graph_summary">Personalize glucose graph colors</string>
    <string name="pref_widget_background_color">Widget Background</string>
    <string name="pref_widget_background_color_summary">Background color and transparency</string>
    <string name="pref_widget_action_title">Widget OnClick Action</string>
    <string name="pref_widget_action_summary">Configure which app to open when you tap on widget</string>
    <string name="pref_widget_launch_title">Application to launch</string>
    <string name="pref_widget_launch_me_summary">Default option. If launch of configured data source application fails then G-Watch App will be opened.</string>
    <string name="pref_data_source_aaps_ignore_bg_title">Ignore glucose values from AAPS</string>
    <string name="pref_data_source_nightscout" translatable="false">NightScout</string>
    <string name="pref_nightscout_enable">Enable NightScout Follower</string>
    <string name="pref_nightscout_url_title">NightScout URL</string>
    <string name="pref_nightscout_url_summary">example: https://myapp.herokuapp.com</string>
    <string name="pref_nightscout_api_secret_title">API Secret</string>
    <string name="pref_nightscout_api_secret_summary">Optional, depends on NS setup</string>
    <string name="pref_nightscout_exp_trust_title">Explicit certificate trust</string>
    <string name="pref_nightscout_exp_trust_summary">Use, if you have issues with server certificate (self-signed, private CA, etc.)</string>
    <string name="pref_nightscout_token_title">Access Token</string>
    <string name="pref_nightscout_token_summary">Optional, depends on NS setup and role</string>
    <string name="pref_data_source_dexcom_share" translatable="false">Dexcom Share</string>
    <string name="pref_dexcom_share_enable">Enable Dexcom Share Follower</string>
    <string name="pref_dexcom_share_account_title">Account Name</string>
    <string name="pref_dexcom_share_account_summary"> </string>
    <string name="pref_dexcom_share_secret_title">Password</string>
    <string name="pref_dexcom_share_secret_summary"> </string>
    <string name="pref_dexcom_share_us_account_title">US account?</string>
    <string name="pref_dexcom_share_us_account_summary_off">International account</string>
    <string name="pref_dexcom_share_us_account_summary_on">US account</string>
    <string name="pref_cloud_request_latency_title">Cloud latency:</string>
    <string name="pref_cloud_request_latency_summary">Delay to be added to regular schedule to avoid retries (delay from collecting value to cloud server response), 10–150 seconds</string>
</resources>