<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2021 Juraj Antal

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="pref_main"
    app:iconSpaceReserved="false"
    android:id="@+id/pref_main"
    >

    <ListPreference
        android:title="@string/pref_language_title"
        android:key="pref_language"
        android:entries="@array/languages"
        android:entryValues="@array/language_codes"
        android:defaultValue="system"
        app:iconSpaceReserved="false"
        />

    <PreferenceScreen
        app:fragment="sk.trupici.gwatch.wear.settings.fragment.DataSourceFragment"
        app:key="data_source_screen"
        app:title="@string/pref_data_source_title"
        app:summary="@string/pref_data_source_summary"
        app:iconSpaceReserved="false"
        />

    <PreferenceScreen
        app:fragment="sk.trupici.gwatch.wear.settings.fragment.GlucoseLevelsFragment"
        app:key="glucose_levels_screen"
        app:title="@string/pref_glucose_levels_title"
        app:summary="@string/pref_glucose_levels_summary"
        app:iconSpaceReserved="false"
        />

    <PreferenceScreen
        app:fragment="sk.trupici.gwatch.wear.settings.fragment.AppWidgetFragment"
        app:key="app_widget_screen"
        app:title="@string/pref_widget_title"
        app:summary="@string/pref_widget_summary"
        app:iconSpaceReserved="false"
        />


</androidx.preference.PreferenceScreen>