<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2019 Juraj Antal

 Originally created in G-Watch App

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:id="@+id/menu_standard">
        <item android:id="@+id/action_apply"
            android:title="@string/action_apply"
            android:icon="@drawable/ic_send"
            app:iconTint="@color/toolbar_button"
            android:orderInCategory="100"
            app:showAsAction="always" />

        <item android:id="@+id/action_apply_all"
            android:title="@string/action_apply_all"
            android:icon="@drawable/ic_send"
            app:iconTint="@color/toolbar_button"
            android:orderInCategory="200"
            app:showAsAction="never" />

        <item android:id="@+id/action_reset_all"
            android:title="@string/action_reset_all"
            android:icon="@drawable/ic_sync_problem"
            app:iconTint="@color/toolbar_button"
            android:orderInCategory="1000"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/menu_main_only">
        <item android:id="@+id/action_import"
            android:title="@string/action_import"
            android:orderInCategory="2000"
            app:showAsAction="never" />
        <item android:id="@+id/action_export"
            android:title="@string/action_export"
            android:orderInCategory="2000"
            app:showAsAction="never" />
    </group>
</menu>